--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "laravel-vite-plugin": "^1.0",
         "lucide": "^0.468.0",
         "lucide-vue-next": "^0.468.0",
+        "maplibre-gl": "^5.2.0",
         "radix-vue": "^1.9.11",
         "reka-ui": "^2.1.1",
         "tailwind-merge": "^2.6.0",
