--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0-beta.3",
+        "@unovis/ts": "^1.5.1",
+        "@unovis/vue": "^1.5.1",
         "@vee-validate/zod": "^4.15.0",
         "@vitejs/plugin-vue": "^5.2.1",
-        "@vueuse/core": "^12.0.0",
+        "@vueuse/core": "^12.8.2",
         "autoprefixer": "^10.4.20",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
