--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,13 +2,9 @@ name: linter
 
 on:
   push:
-    branches:
-      - develop
-      - main
+    branches: [master]
   pull_request:
-    branches:
-      - develop
-      - main
+    branches: [master]
 
 permissions:
   contents: write
