--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,13 +2,9 @@ name: tests
 
 on:
   push:
-    branches:
-      - develop
-      - main
+    branches: [master]
   pull_request:
-    branches:
-      - develop
-      - main
+    branches: [master]
 
 jobs:
   ci:
