--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,24 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    groups:
+      eslint:
+        applies-to: version-updates
+        patterns:
+          - "@eslint*
+          - "eslint*"
+          - "@vue/eslint-config-typescript"
+          - "typescript-eslint"
+      prettier:
+        applies-to: version-updates
+        patterns:
+          - "prettier*"
+      tailwind:
+        applies-to: version-updates
+        patterns:
+          - "tailwind*"
+      tailwind:
+        applies-to: version-updates
+        patterns:
+          - "@vue*"
+          - "*vue*"
