--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.5",
         "@maplibre/maplibre-gl-geocoder": "^1.8.0",
+        "@tailwindcss/postcss": "^4.1.3",
         "@unovis/ts": "^1.5.1",
         "@unovis/vue": "^1.5.1",
         "@vee-validate/zod": "^4.15.0",
@@ -40,8 +41,8 @@
         "maplibre-gl": "^5.3.0",
         "radix-vue": "^1.9.17",
         "reka-ui": "^2.1.1",
-        "tailwind-merge": "^2.6.0",
-        "tailwindcss": "^3.4.17",
+        "tailwind-merge": "^3.2.0",
+        "tailwindcss": "^4.1.3",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.8.2",
         "vaul-vue": "^0.4.1",
