--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.9",
+        "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
         "tightenco/ziggy": "^2.4"
     },
