🎨 Apply Laravel Pint fixes

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,9 @@
             "npm run build:ssr",
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"php artisan inertia:start-ssr\" --names=server,queue,logs,ssr"
-        ]
+        ],
+        "pint": "pint --test",
+        "pint:fix": "pint"
     },
     "extra": {
         "laravel": {
