🎨 Apply Laratan fixes

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
         "laravel/telescope": "^5.6",
@@ -64,7 +65,8 @@
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"php artisan inertia:start-ssr\" --names=server,queue,logs,ssr"
         ],
         "pint": "pint --test",
-        "pint:fix": "pint"
+        "pint:fix": "pint",
+        "larastan": "phpstan analyse"
     },
     "extra": {
         "laravel": {
