👷 Update lint.yml

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Run Pint
         run: vendor/bin/pint
 
+      - name: Run PHPStan
+        run: vendor/bin/phpstan analyse --memory-limit=1G
+
       - name: Format Frontend
         run: npm run format
 
