--- a/.env.docker
+++ b/.env.docker
@@ -3,3 +3,9 @@ APP_ENV=local
 APP_KEY=base64:zRDpE1+pc2xC3GxjZFAXtWs7klLynwxrK29I3NwiVAk=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.oma.be
+MAIL_PORT=25
+MAIL_FROM_ADDRESS="bofur@oma.be"
+MAIL_FROM_NAME="${APP_NAME}"
