--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,13 +49,7 @@ jobs:
         run: vendor/bin/phpstan analyse --memory-limit=1G
 
       - name: Format Frontend
-        run: npm run format
+        run: npm run prettier
 
       - name: Lint Frontend
-        run: npm run lint
-
-      # - name: Commit Changes
-      #   uses: stefanzweifel/git-auto-commit-action@v5
-      #   with:
-      #     commit_message: fix code style
-      #     commit_options: '--no-verify'
+        run: npm run eslint
