--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
         "dev": "vite",
-        "format": "prettier --write resources/",
-        "format:check": "prettier --check resources/",
-        "lint": "eslint . --fix"
+        "prettier": "prettier --check resources/",
+        "prettier:fix": "prettier --write resources/",
+        "eslint": "eslint resources/",
+        "eslint:fix": "eslint resources/ --fix"
     },
     "devDependencies": {
         "@eslint/js": "^9.29.0",
