--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "larastan/larastan": "^3.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
+        "laravel/prompts": "^0.3.5",
         "laravel/telescope": "^5.6",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
