--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@inertiajs/vue3": "^2.0.13",
         "@maplibre/maplibre-gl-geocoder": "^1.9.0",
         "@tailwindcss/postcss": "^4.1.10",
+        "@tanstack/vue-table": "^8.21.3",
         "@unovis/ts": "^1.5.2",
         "@unovis/vue": "^1.5.2",
         "@vee-validate/zod": "^4.15.1",
