✨ Update daily MV hourly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  frankenphp:
+  app:
     build:
       context: .
     entrypoint: php artisan octane:frankenphp --workers=1 --max-requests=1
@@ -15,6 +15,24 @@ services:
       - "8000:8000"
     # volumes:
     #   - ./:/app
+    networks:
+      - laravel-development
+    depends_on:
+      postgres:
+        condition: service_started
+
+  scheduler:
+    build:
+      context: .
+    entrypoint: php artisan schedule:work
+    env_file: .env.docker
+    environment:
+      DB_CONNECTION: pgsql
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USERNAME: laravel
+      DB_PASSWORD: laravel
+      DB_DATABASE: laravel
     networks:
       - laravel-development
     depends_on:
