--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/octane": "^2.9",
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-medialibrary": "^11.13",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
