--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -25,6 +25,11 @@ services:
     build:
       context: .
     entrypoint: php artisan schedule:work
+    healthcheck:
+      test: ["CMD", "bin/healthcheck-schedule"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     env_file: .env.docker
     environment:
       DB_CONNECTION: pgsql
