--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ permissions:
   contents: write
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,22 +22,4 @@ jobs:
       - name: Build
         uses: docker/build-push-action@v6
         with:
-          load: true
-          tags: wow-be:latest
-
-      - name: Test
-        run: |
-          docker run --rm wow-be:latest
-
-  compose:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Compose
-        uses: docker/setup-compose-action@v1
-
-      - name: Test
-        run: |
-          docker compose -f docker-compose-local.yml up --build
+          push: false
