--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -43,7 +43,7 @@ jobs:
       #       ${{ runner.os }}-nodejs-
 
       - name: Run Pint
-        run: vendor/bin/pint
+        run: vendor/bin/pint --test
 
       - name: Run PHPStan
         run: vendor/bin/phpstan analyse --memory-limit=1G
