🧑‍💻 Add Mailpit to Docker Compose
See https://mailpit.axllent.org/

--- a/.env.docker
+++ b/.env.docker
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.oma.be
-MAIL_PORT=25
-MAIL_FROM_ADDRESS="bofur@oma.be"
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_FROM_ADDRESS="docker@localhost"
 MAIL_FROM_NAME="${APP_NAME}"
