--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -59,8 +59,25 @@ services:
     networks:
       - laravel-development
 
+  mailpit:
+    image: axllent/mailpit:latest
+    restart: unless-stopped
+    ports:
+      - "8025:8025"
+      - "1025:1025"
+    volumes:
+      - mailpit-data-development:/data
+    environment:
+      MP_DATABASE: /data/mailpit.db
+      MP_SMTP_AUTH_ACCEPT_ANY: 1
+      MP_SMTP_AUTH_ALLOW_INSECURE: 1
+      MP_ENABLE_CHAOS: 1
+    networks:
+      - laravel-development
+
 networks:
   laravel-development:
 
 volumes:
   postgres-data-development:
+  mailpit-data-development:
