--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [8.3, 8.4]
+        php-version: [8.4]
         node-version: [22, 24]
 
     services:
