--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.2.0",
         "laravel-vite-plugin": "^2.0",
+        "laravel-vue-i18n": "^2.8.0",
         "lucide": "^0.525.0",
         "lucide-vue-next": "^0.525.0",
         "maplibre-gl": "^5.6.1",
