--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,16 @@
     "require": {
         "php": "^8.3",
         "dedoc/scramble": "^0.12.23",
+        "doctrine/dbal": "^4.3",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.9",
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
+        "spatie/cpu-load-health-check": "^1.0",
+        "spatie/laravel-health": "^1.34",
         "spatie/laravel-medialibrary": "^11.13",
+        "spatie/security-advisories-health-check": "^1.2",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
