--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,10 @@ APP_MAINTENANCE_DRIVER=file
 VITE_APP_NAME="${APP_NAME}"
 
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=daily
+LOG_DAILY_DAYS=14
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=notice
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
