--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@maplibre/maplibre-gl-geocoder": "^1.9.0",
         "@tailwindcss/postcss": "^4.1.12",
         "@tanstack/vue-table": "^8.21.3",
+        "@types/marked": "^5.0.2",
         "@unovis/ts": "^1.5.2",
         "@unovis/vue": "^1.5.2",
         "@vee-validate/zod": "^4.15.1",
@@ -42,6 +43,7 @@
         "lucide": "^0.541.0",
         "lucide-vue-next": "^0.541.0",
         "maplibre-gl": "^5.6.1",
+        "marked": "^16.2.0",
         "radix-vue": "^1.9.17",
         "reka-ui": "^2.3.2",
         "tailwind-merge": "^3.3.1",
