--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,14 @@ services:
     volumes:
       - media_storage:/app/public/media
 
-  scheduler:
+  queue-worker:
     build:
       context: .
       args:
         VITE_APP_NAME: ${VITE_APP_NAME}
-    entrypoint: php artisan schedule:work
+    entrypoint: php artisan queue:work
     healthcheck:
-      test: ["CMD", "bin/healthcheck-schedule"]
+      test: ["CMD", "bin/healthcheck-queue-worker"]
       interval: 10s
       timeout: 5s
       retries: 3
