--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -28,14 +28,14 @@ services:
       postgres:
         condition: service_started
 
-  scheduler:
+  queue-worker:
     build:
       context: .
       args:
         VITE_APP_NAME: ${VITE_APP_NAME}
-    entrypoint: php artisan schedule:work
+    entrypoint: php artisan queue:work
     healthcheck:
-      test: ["CMD", "bin/healthcheck-schedule"]
+      test: ["CMD", "bin/healthcheck-queue-worker"]
       interval: 10s
       timeout: 5s
       retries: 3
