🔧 Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+ASSET_URL="/" # Relative URL for assets (see https://laravel.com/docs/12.x/vite#custom-base-urls)
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
