--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "laravel-vue-i18n": "^2.8.0",
         "lucide": "^0.541.0",
         "lucide-vue-next": "^0.542.0",
+        "luxon": "^3.7.1",
         "maplibre-gl": "^5.6.1",
         "marked": "^16.2.0",
         "radix-vue": "^1.9.17",
