--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,11 +16,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.4'
+      - name: Validate composer.json
+        run: composer validate
       - name: Install Dependencies
         run: |
-          composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+          composer install --no-interaction --no-scripts --no-progress --prefer-dist
           npm install
       - name: Run Pint
         run: composer run pint
@@ -33,18 +33,21 @@ jobs:
 
   quality-aws-sync:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./bin/aws-sync
     steps:
       - uses: actions/checkout@v4
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.4'
+          extensions: pdo_oci, pdo_pgsql
+      - name: Validate composer.json
+        run: composer validate
       - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-        working-directory: ./bin/aws-sync
+        run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Run Pint
         run: composer run pint
-        working-directory: ./bin/aws-sync
       - name: Run PHPStan
         run: composer run phpstan
-        working-directory: ./bin/aws-sync
