--- a/.github/workflows/aws-sync.yml
+++ b/.github/workflows/aws-sync.yml
@@ -21,8 +21,11 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
+          extensions: pdo_oci, pdo_pgsql
           tools: box
       - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        run: |
+          composer install --no-interaction --no-scripts --no-progress --prefer-dist
+          composer bin box install --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Compile
         run: vendor/bin/box compile
