--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,11 +16,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.4'
+      - name: Validate composer.json
+        run: composer validate
       - name: Install Dependencies
         run: |
-          composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+          composer install --no-interaction --no-scripts --no-progress --prefer-dist
           npm install
       - name: Run Pint
         run: composer run pint
@@ -41,9 +41,11 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.4'
+          extensions: pdo_oci, pdo_pgsql
+      - name: Validate composer.json
+        run: composer validate
       - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Run Pint
         run: composer run pint
       - name: Run PHPStan
