--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jbelien/wow-be",
+    "name": "rmibelgium/wow-be",
     "description": "",
     "type": "project",
     "keywords": [
