--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "8000:8000"
     volumes:
       - media_storage:/app/public/media
+    restart: unless-stopped
 
   queue-worker:
     build:
@@ -24,6 +25,7 @@ services:
     env_file: .env
     volumes:
       - media_storage:/app/public/media
+    restart: unless-stopped
 
 volumes:
   media_storage:
