--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,8 +12,8 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [8.4]
-        node-version: [22, 24]
+        php-version: [8.4, 8.5]
+        node-version: [24]
 
     services:
       postgres:
